--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 
 - title: Home
   url: /
-# - title: Posts
-#   url: /posts/
+- title: Pudis
+  url: /pudis/
 # - title: Categories
 #   url: /categories/
 # - title: Tags
