--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 
 - title: Home
   url: /
-- title: Pudis
-  url: /pudis/
+- title: Pudi
+  url: /pudi/
 # - title: Categories
 #   url: /categories/
 # - title: Tags
