--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,13 +4,15 @@
   url: /
 - title: Pudi
   url: /pudi/
-# - title: Categories
-#   url: /categories/
-# - title: Tags
-#   url: /tags/
-# - title: Recipes
-#   url: /recipes/
-# - title: Search
-#   url: /search/
+- title: Recipes
+  url: /recipes/
+- title: Friends
+  url: /friends/
+- title: Categories
+  url: /categories/
+- title: Tags
+  url: /tags/
+- title: Search
+  url: /search/
 # - title: External Page
 #   url: https://the-page.com/you-want-to-link-to.html
