--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,7 @@
   url: /pudi/
 - title: Friends
   url: /friends/
+- title: Search
+  url: /search/
 # - title: External Page
 #   url: https://the-page.com/you-want-to-link-to.html
