--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@
   url: /pudi/
 - title: Friends
   url: /friends/
+- title: Glossary
+  url: /glossary/
 - title: Search
   url: /search/
 # - title: External Page
