--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ skin: "/assets/css/skins/default.css"
 locale: en-US
 title: "Rosie's Recipes"
 description: "It really is the best."
-baseurl: "/rosies-recipes" # the subpath of your site, e.g. "/blog"
+# baseurl: "/rosies-recipes" # the subpath of your site, e.g. "/blog"
 url: "https://chai-nadig.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: "/images/logo.png" # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
